styles.css
@font-face {
  font-family: "Futura";
  src: url("./font/FuturaBoldFont.tttf");
}

* {
  box-sizing: border-box;
}

html {
    background-color: #2e2b2b;
    background-image: url("./images/wall.jpg");
    background-repeat: no-repeat;
    color: white;
}

body{
    display: flex;
    flex-direction: column;
    margin: 0;
}

.book-picker{
    align-self: center;
    align-items: center;
    display: flex;
    font-weight: bold;
    flex-direction: column;
    height: 90vh;
    justify-content: space-around;
    width: 80vw;
}

button{
  background: linear-gradient(#441b1b, #66292a);
  border: 2px solid black;
  color: white;
  cursor: pointer;
  font-size: .5em;
  font-weight: bold;
  width: 100%;
}

button:hover{
  background: white;
  border: 2px solid #441b1b;
  color: #441b1b;
  cursor: pointer;
  font-size: .5em;
  font-weight: bold;
  width: 100%;
}

.choices{
    color: white;
    font-family: "Futura", "Times New Roman";
    font-size: 6vw;
    text-align: center;
    text-shadow: 5px 5px #0c0303;
}

select{
    background: linear-gradient(#803334, 10%, #441b1b, #803334 );
    border: 2px solid black;
    box-sizing: border-box;
    color: white;
    cursor: pointer;
    font-size: .5em;
    font-weight: bold;
    margin: 8px 0;
    min-height: fit-content;
    padding: 12px 20px;
    text-align: center;
    width: 100%;
  }

  .menu {
    align-items: center;
    background: black;
    bottom: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    left: 0;
    list-style: none;
    position: fixed;
    right: 0;
    transform: translateY(-100%);
    transition: transform 0.5s;
    top: 0;
    z-index: 99;
  }

  .menu a{
    color: white;
    font-size: 6vw;
    font-family: "Futura";
    text-decoration: none;
  }

  .menu a:hover{
    text-decoration: underline;
  }

  .showMenu {
    transform: translateY(0);
  }

.spacer{
  height: 1vh;
}

/* Hamburger Menu */

.menu-button{
  align-items: center;
  cursor: pointer;
  display: flex;
  flex-shrink: 1;
  height: 55px;
  justify-content: center;
  left: 50%;
  position: relative;
  top: 0;
  transform: translateX(-50%);
  transition: all .5s ease-in-out;
  width: 50px;
  z-index: 100;
}

.menu-button-burger{
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  height: 6px;
  transition: all .5s ease-in-out;
  width: 50px;
  z-index: 100;
}

.menu-button-burger::before, 
.menu-button-burger::after {
  background: #fff;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  content: '';
  height: 6px;
  position: absolute;
  transition: all .5s ease-in-out;
  width: 50px;
}

.menu-button-burger::before{
  transform: translateY(-16px);
}

.menu-button-burger::after{
  transform: translateY(16px);
}

/* Animation */

.menu-button.open .menu-button-burger{
  background: transparent;
  box-shadow: none;
  transform: translateX(-50px);
}

.menu-button.open .menu-button-burger::before {
  transform: rotate(45deg) translate(35px, -35px);
}

.menu-button.open .menu-button-burger::after{
 transform: rotate(-45deg) translate(35px, 35px);
}

/* Slideshow POPUP */

.slider-popup {
  background-color: rgba(8, 8, 8, 0.11);
  display: grid;
  grid-template-columns: 0.1fr 1fr 0.1fr;
  grid-template-rows: 1fr .2fr;
  height: 90vh;
  width: 100vw;
  right: 0;
  left: 0;
  position: relative;
}

.slider-middle {
  align-items: center;
  display: none;
  justify-items: center;
}

.slider-left {
  align-items: center;
  display: none;
  justify-items: right;
  opacity: 70%;
}

.slider-left:hover {
background: black;
opacity: 60%;
}

.slider-right {
  align-items: center;
  display: none;
  justify-items: left;
  opacity: 70%;
}

.slider-right:hover {
  background: black;
  opacity: 60%;
  }

.slider-image {
  display: none;
}

.slider-image-visible {
  display: grid;
  max-width: 100%;
}

.arrow-right {
  border-bottom: 12vw solid transparent;
  border-left: 12vw solid rgb(77, 85, 77);
  border-top: 12vw solid transparent;
}

.arrow-right:hover {
  border-bottom: 13vw solid transparent;
  border-left: 13vw solid rgb(243, 243, 243);
  border-top: 13vw solid transparent;
}

.arrow-left {
  border-bottom: 12vw solid transparent;
  border-right: 12vw solid rgb(77, 85, 77);
  border-top: 12vw solid transparent;
}

.arrow-left:hover {
  border-bottom: 13vw solid transparent;
  border-right: 13vw solid rgb(243, 243, 243);
  border-top: 13vw solid transparent;
}

.progress-circle {
  background-color: #bbb;
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  width: 25px;
}

.progress-circle:hover {
  background-color: rgb(14, 13, 13);
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  transition-duration: 1.5s;
  width: 25px;
}
.progress-circle-active {
  background-color: rgb(5, 5, 5);
  border: solid 1px white;
  border-radius: 50%;
  display: inline-block;
  height: 25px;
  transition-duration: 1.5s;
  width: 25px;
}

.close-slider {
  background-color: #bbb;
  display: inline-block;
  height: 25px;
  width: 25px;
}

.close-slider:hover {
  background-color: rgb(87, 1, 1);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.pause {
  background-color: #bbb;
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.pause:hover {
  background-color: rgb(179, 82, 3);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

.paused {
  background-color: rgb(179, 82, 3);
  display: inline-block;
  height: 25px;
  transition-duration: 1s;
  width: 25px;
}

  /* Adjustment of menu and slideshow display on mobile*/

  @media screen and (min-width: 980px) /* Desktop */ {
  }

  @media screen  and (max-width: 979px) /* Tablet */ {

  }

   /* Mobile */ 
  @media screen and (max-width: 800px) {
    .choices{
      font-size: 7vw;
      text-shadow: 5px 5px #0c0303;
  }
  }
  
  @media screen and (max-width: 600px) {
    .choices{
      font-size: 8vw;
      text-shadow: 4px 4px #0c0303;
  }
  }

  @media screen and (max-width: 400px){

  }

